welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.error
occurrences:2: error: not found: value occurrences
  var occurrences()=0
      ^occurrences:5: error: reassignment to val
      occurrences=occurences+1
                 ^occurrences:6: error: reassignment to val
    }else occurrences=occurences
                     ^occurrences:3: error: type mismatch;
 found   : Unit
 required: Int
  for (i <- 0 to nums.length-2){
         ^