welcome.lessons.welcome.array.search.OccurrenceOfValue.scala.code
def occurrences(nums:Array[Int],lookingFor:Int):Int = {
  var occurrences()=0
  for (i <- 0 to nums.length-2){
    if (nums(i)==lookingFor){
      occurrences=occurences+1
    }else occurrences=occurences
  }
}